--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     </header>
     <main>
         <h2>Bolo de chocolate:</h2>
-        <section class="imagem">   
+        <section class="imagem" id="img01">   
             <h3>Massa:</h3>
                 <ul>
                     <li>4 ovos</li>
@@ -59,7 +59,7 @@
                     <p class="fonte">Fonte: <a href="https://www.tudogostoso.com.br/receita/62547-a-melhor-receita-de-bolo-de-chocolate.html" target="_blank">https://www.tudogostoso.com.br</a></p>
             </section>
             <h2>Brigadeiro:</h2>
-            <section class="imagem" id="grande"> 
+            <section class="imagem " id="img02"> 
                 <h3>Ingredientes:</h3>
                 <ul>
                     <li>
@@ -93,7 +93,7 @@
                 <p class="fonte">Fonte:<a href="https://www.tudogostoso.com.br/receita/114-brigadeiro.html">https://www.tudogostoso.com.br</a></p>
             </section>
             <h2>Empada de Frango:</h2>
-            <section class="imagem"> 
+            <section class="imagem" id="img03"> 
                 <h3>Massa:</h3>
                 <ul>
                     <li>4 xícaras (chá) de farinha de trigo</li>
